# excel-sourcesense

./: .gitignore  README.md  create_test_files.py  main.py  pyproject.toml  test_excel.py
app/: activities.py  clients.py  handlers.py  transformer.py  workflows.py
frontend/static/: script.js  styles.css
frontend/templates/: index.html
